# CallCppFromQML

./: CMakeLists.txt  Other.qml  cppworker.cpp  main.cpp  main.qml
